[tool.poetry]
name = "yubiserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
requests = "^2.32.3"
pydantic = "^2.10.3"
pytest = "^8.3.4"
httpx = "^0.28.0"
yubikey-manager = "^5.5.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
